# typedb-studio

./: .babelrc  .bazelignore  .bazelrc  .eslintrc.js  .gitignore  .gitmodules  AGENTS.md  BUILD  BUILD.bazel  Hello.java  JPackageRunner.kt  JVMApplicationImageBuilder.kt  MainWindow.kt  README.md  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  Snackbar.kt  Studio.kt  VERSION  WORKSPACE  WORKSPACE.bazel  angular.json  artifact-extractor.bzl  babel.config.js  bazel-bin  bazel-out  bazel-testlogs  bazel-typedb-studio  deployment.bzl  deps.bzl  electron-builder.json  electron-builder.yml  install-node-electron.sh  jest.config.js  main.kt  maven.bzl  netlify.toml  nohup.out  package-lock.json  package.json  (+6 more)
.circleci/: approve-release.py  config-bak.yml  config.yml  wait-for-ssh.py
.circleci/build-workbase-win/: README.md  build-workbase-win.py  instance-setup-template.ps1
.circleci/templates/: setup.ps1
.circleci/windows/: README.md  assemble.bat  assemble.py  build.bat  dependencies.config  deploy.bat  deploy_release.bat  deploy_snapshot.bat  prepare.bat  short_workspace.patch
.electron-vue/: dev-runner.js  notarize.js  webpack.renderer.config.js
.factory/: automation.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  REFACTOR.md  bug-report.md
.grabl/: automation.yml  wait-for-release.py
.ijwb/: .bazelproject
appearance/: BUILD  StudioTheme.kt  VisualiserTheme.kt
assets/: entitlements.mac.plist  index.html
assets/css/: fonts.css
binary/: BUILD  typedb-studio
builder/: npm-run-build.sh  npm-test.sh
common/: BUILD  Label.kt  Property.kt  SystemUtils.kt
common/component/: Form.kt  Icon.kt  Layout.kt  Misc.kt  Notification.kt  Resizable.kt  Separator.kt  TextField.kt
common/notification/: Error.kt  Message.kt
common/platform/: OS.kt
common/system/: ErrorMessage.kt  UserDataDirectory.kt
common/theme/: Color.kt  ColorTheme.kt  Theme.kt  Typography.kt  TypographyTheme.kt
common/util/: IconUtil.kt  SwingUtil.kt
components/: BUILD  Snackbar.kt
config/brew/: BUILD  grakn-workbase.rb  typedb-studio.rb  typedb-workbase.rb
config/logback/: BUILD  logback-test.xml  logback.xml
config/mac/: BUILD  (+1 more)
connection/: BUILD  Connection.kt  ConnectionScreen.kt  ConnectionState.kt  ConnectionWindow.kt
controller/: BUILD  Connection.kt  Controller.kt  Notifier.kt  Project.kt
data/: BUILD  BaseClient.kt  ClusterClient.kt  ConceptUtils.kt  CoreClient.kt  DB.kt  DBClient.kt  DBServer.kt  GraphData.kt  QueryResponseStream.kt
db/: BUILD  DB.kt  DBServer.kt  GraphData.kt  QueryResponseStream.kt
diagnostics/: BUILD  ErrorHandling.kt
docs/: BUILD  deps.sh  framework-package-structure.dot  global-package-structure.dot  module-package-structure.dot  package-structure.dot  service-package-structure.dot  state-package-structure.dot  view-package-structure.dot
grakn-client/: GraknClient.d.ts  GraknClient.js  GraknOptions.d.ts  GraknOptions.js  README.md  dependencies_internal.d.ts  dependencies_internal.js  package.json
graph/: BUILD  Geometry.kt  TypeDBForceSimulation.kt  TypeDBGraph.kt
images/: BUILD
login/: BUILD  ClusterLoginPanel.kt  CoreLoginPanel.kt  FormField.kt  FormFieldGroup.kt  LoginScreen.kt  LoginScreenState.kt  LoginState.kt
model/: BUILD
module/: BUILD  StatusBar.kt  Toolbar.kt
navigation/: BUILD  LoginScreenState.kt  Navigator.kt  ScreenState.kt  TypeDBVisualiserState.kt  WorkspaceScreenState.kt
navigator/: BUILD  NavigatorArea.kt  ProjectNavigator.kt  RolesNavigator.kt  RuleNavigator.kt  TypeNavigator.kt  UserNavigator.kt
notification/: BUILD  NotificationArea.kt  NotificationPopup.kt
page/: BUILD  PageArea.kt
project/: BUILD  ProjectWindow.kt
public/: index.html
resources/: BUILD  logback-test.xml  logback.xml
routing/: BUILD  ConnectionFormSubmission.kt  ConnectionRoute.kt  LoginFormSubmission.kt  LoginRoute.kt  Route.kt  Router.kt  WorkspaceRoute.kt
scripts/: notarize.js  set-version.js
service/: BUILD  ConnectionService.kt  ErrorService.kt  NotifierService.kt  ProjectService.kt  Service.kt
session/: BUILD  BaseClient.kt  ClusterClient.kt  CoreClient.kt  DBClient.kt
src/: BUILD  PersistentStorage.js  app.tsx  background.js  index-styles.ts  index.html  index.tsx  logger.js  main.dev.ts  main.js  main.ts  menu.ts  package.json  polyfills.ts  robots.txt  root.component.html  root.component.scss  root.component.ts  router.tsx  routes.js  site.webmanifest  tsconfig.json  typings.d.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
state/: AppDataManager.kt  AppearanceManager.kt  BUILD  ConfirmationManager.kt  Controller.kt  EditorScaler.kt  EventStream.kt  GlobalState.kt  State.kt  StudioState.kt  Versioned.kt
statusbar/: BUILD  StatusBar.kt  StatusBarArea.kt
storage/: AppData.kt  BUILD
styles/: base.scss  codemirror.scss  material-overrides.scss  material.scss  media.scss  primary.scss  secondary.scss  shapes.scss  tp.scss  typography.scss
test/: BUILD  Experiment.kt  Quickstart.kt  TestUtils.kt
toolbar/: BUILD  Toolbar.kt  ToolbarArea.kt
typedb-visualiser/: .babelrc  build.sh  geometry.ts  index.ts  prism-typeql.ts  publish.sh  react-component.tsx  styles.ts  tsconfig.json  typeql-data.tsx  typeql-force-graph-pixijs-legacy.ts  typeql-force-graph.ts  typeql-styles.ts  typeql-visualiser.tsx  webpack.config.js
view/: BUILD  BrowserArea.kt  BrowserGroup.kt  Connection.kt  Notification.kt  NotificationArea.kt  Page.kt  PageArea.kt  Project.kt  StatusBar.kt  Studio.kt  Toolbar.kt
viewer/: BUILD  Connection.kt  Notification.kt  Page.kt  Project.kt  StatusBar.kt  Studio.kt  Toolbar.kt
visualiser/: BUILD  Geometry.kt  GeometryTest.kt  GraphState.kt  SimulationMetrics.kt  SimulationRunner.kt  SimulationRunnerCoroutine.kt  TypeDBForceSimulation.kt  TypeDBVisualiser.kt  TypeDBVisualiserState.kt  VisualiserTheme.kt
workspace/: BUILD  CodeEditor.kt  ConceptPanel.kt  ExecutionTabState.kt  PanelHeader.kt  QuerySettingsPanel.kt  QueryTabState.kt  SidebarPanelHeader.kt  StatusBar.kt  Toolbar.kt  WorkspaceScreen.kt  WorkspaceScreenState.kt
(+1438 files in other folders)
