#
# Copyright (C) 2021 Vaticle
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

# NOTE: this file needs to be called `BUILD.bazel` to avoid conflicts with `build/` expected by electron-builder

load("@vaticle_dependencies//distribution:deployment.bzl", "deployment")
load("@vaticle_dependencies//tool/checkstyle:rules.bzl", "checkstyle_test")
load("@vaticle_bazel_distribution//common:rules.bzl", "checksum")
load("@vaticle_bazel_distribution//github:rules.bzl", "deploy_github")
load("@vaticle_bazel_distribution//brew:rules.bzl", "deploy_brew")
load("@rules_pkg//:pkg.bzl", "pkg_zip")


pkg_zip(
    name = "mac-zip",
    srcs = glob(["dist_electron/*.dmg"]),
)

deploy_github(
    name = "deploy-github-mac",
    organisation = 'vaticle',
    repository = 'typedb-workbase',
    title = "TypeDB Workbase",
    title_append_version = True,
    release_description = "//:RELEASE_TEMPLATE.md",
    archive = ":mac-zip",
    version_file = ":VERSION",
    draft = False
)

pkg_zip(
    name = "windows-zip",
    srcs = glob(["dist_electron/*.exe"]),
)

deploy_github(
    name = "deploy-github-windows",
    organisation = 'vaticle',
    repository = 'typedb-workbase',
    title = "TypeDB Workbase",
    title_append_version = True,
    release_description = "//:RELEASE_TEMPLATE.md",
    archive = ":windows-zip",
    version_file = ":VERSION",
    draft = False
)

pkg_zip(
    name = "linux-zip",
    srcs = glob(["dist_electron/*.AppImage"]),
)

deploy_github(
    name = "deploy-github-linux",
    organisation = 'vaticle',
    repository = 'typedb-workbase',
    title = "TypeDB Workbase",
    title_append_version = True,
    release_description = "//:RELEASE_TEMPLATE.md",
    archive = ":linux-zip",
    version_file = ":VERSION",
    draft = False
)

py_binary(
    name = "wait-for-release",
    srcs = [".grabl/wait-for-release.py"],
)

checksum(
    name = "checksum-mac",
    archive = ":mac-zip",
)

deploy_brew(
    name = "deploy-brew",
    snapshot = deployment['brew.snapshot'],
    release = deployment['brew.release'],
    formula = "//config/brew:typedb-workbase.rb",
    checksum = "//:checksum-mac",
    version_file = "//:VERSION",
    type = "cask",
)

checkstyle_test(
    name = "checkstyle",
    include = glob(["*", ".grabl/*", ".circleci/**"]),
    exclude = glob([
        ".circleci/windows/dependencies.config",
        "build/**",
        "dist_electron/**/*",
        "package.json",
        "package-lock.json"
    ]),
    license_type = "agpl",
)

# CI targets that are not declared in any BUILD file, but are called externally
filegroup(
    name = "ci",
    data = [
        "@vaticle_dependencies//tool/checkstyle:test-coverage",
        "@vaticle_dependencies//tool/release:create-notes",
        "@vaticle_dependencies//tool/bazelrun:rbe",
    ],
)
